Add SMP attributes to KfDef

--- a/bootstrap/config/base/kustomization.yaml
+++ b/bootstrap/config/base/kustomization.yaml
@@ -1,4 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- kfdef.apps.kubeflow.org_kfdefs.yaml
 - kfctl_default.yaml
